# FractalsParallel

docs/: cuda measurments  makescript
sources/backend/c/: CMakeLists.txt  fractal_C_MPI_live.c  fractal_C_MPI_live_CLIArgs.c  fractal_C_openMP_live.c  fractal_c_mpi_live  fractal_c_openmp_live
sources/backend/cuda/: CudaFractalBackend.cu
sources/frontend/GUI/: FractalGuiRealtime.java
